Update CarbCounter+ to v0.3.1

--- a/projects/CarbCounterPlusAngular/app/dosecalc/dosecalc.html
+++ b/projects/CarbCounterPlusAngular/app/dosecalc/dosecalc.html
@@ -42,19 +42,22 @@
             <div class="dosage-wrapper">
 
                 <div class="results-wrapper">
+                  <div>
                   <p class="ratio__heading">Carb Coverage (Ratio {{carbRatio.view}})</p>
                     <div class="result-wrapper">
                         <p class="dosage__result--ratioOneDP">{{ratioResultOneDP}}</p>
                         <p class="dosage__unit">IU</p>
                     </div>
                     <p class="dosage__result--ratio">{{ratioResult}} (rounded)</p>
-                  
+                  </div>
+                  <div>
                     <p class="correction__heading">Correctional (Target {{target}})</p>
                     <div class="result-wrapper">
                         <p class="dosage__result--correctionOneDP">{{correctionResultOneDP}}</p>
                         <p class="dosage__unit">IU</p>
                     </div>
                     <p class="dosage__result--correction">{{correctionResult}} (rounded)</p>
+                  </div>
                 </div>
 
                 <div class="total">
