--- a/projects/CarbCounterPlusAngular/app/index.html
+++ b/projects/CarbCounterPlusAngular/app/index.html
@@ -19,7 +19,7 @@
         <link rel="mask-icon" href="favicons/safari-pinned-tab.svg">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/normalize.css">
         <link rel="stylesheet" href="bower_components/html5-boilerplate/dist/css/main.css">
-        <link rel="stylesheet" href="app.css">
+        <link rel="stylesheet" href="build/css/app.min.css">
         <script src="bower_components/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
