--- a/projects/CarbCounterPlusAngular/app/index.html
+++ b/projects/CarbCounterPlusAngular/app/index.html
@@ -28,7 +28,9 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <div class="app-wrapper" ng-view></div>
+        <div class="app-wrapper" ng-view>
+          <noscript>CarbCounter+ requires Javascript to work.</noscript>
+        </div>
 
         <!--<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>-->
         <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>       
