fixed overflow issue

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,20 +28,26 @@
     </nav>
     <main class="portfolio">
       <div class="portfolio-section">
-        <svg class="portfolio__section-label" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100% 80"><defs><style>.cls-1{fill:#2d2d2d;}.cls-2{font-size:37.81px;fill:#fff;font-family:Montserrat-SemiBold, Montserrat;font-weight:700;}</style></defs><title>portfolio__section-label</title><rect class="cls-1" x="-0.3" y="54.8" width="100%" height="25"/><polygon class="cls-1" points="-0.3 79.7 -0.3 -0.3 351 -0.3 431.5 79.7 -0.3 79.7"/><text class="cls-2" transform="translate(14.6 52.8)">WEB</text></svg>
+        <div class="portfolio__section-label">
+          <svg class="portfolio__section-label_tab" xmlns="http://www.w3.org/2000/svg" width="355px"><defs><style>.a{fill:#2d2d2d;}</style></defs><title>portfolio__section-label</title><rect class="a" width="100%" height="80"/><text class="portfolio__section-label_text" transform="translate(15 53.4)">WEB</text></svg>
+          <svg xmlns="http://www.w3.org/2000/svg"> <defs><style>.a{fill:#2d2d2d}</style></defs> <polygon class="a" points="80 80 0 80 0 0 80 80" /> </svg>
+        </div>
         <div class="portfolio-items">
-          <div class="portfolio__item portfolio__item--1"></div>
-          <a class="portfolio__item portfolio__item--2" target="_blank" href="http://matthew.rayner.yoobee.net.nz/WE06/WE06_App/www/index.html#!/modules/login"><div></div></a>
-          <a class="portfolio__item portfolio__item--3" target="_blank" href="./projects/FTTL/index.html"><div></div></a>
+          <a class="portfolio__item portfolio__item--1" href="#"></a>
+          <a class="portfolio__item portfolio__item--2" href="#"></a>
+          <a class="portfolio__item portfolio__item--3" href="#"></a>
         </div>
       </div>
       <div class="portfolio-section">
-        <svg class="portfolio__section-label" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100% 80"><defs><style>.cls-1{fill:#2d2d2d;}.cls-2{font-size:37.81px;fill:#fff;font-family:Montserrat-SemiBold, Montserrat;font-weight:700;}</style></defs><title>portfolio__section-label</title><rect class="cls-1" x="-0.3" y="54.8" width="100%" height="25"/><polygon class="cls-1" points="-0.3 79.7 -0.3 -0.3 351 -0.3 431.5 79.7 -0.3 79.7"/><text class="cls-2" transform="translate(14.6 52.8)">GRAPHIC DESIGN</text></svg>
+        <div class="portfolio__section-label">
+          <svg class="portfolio__section-label_tab" xmlns="http://www.w3.org/2000/svg" width="355px"><defs><style>.a{fill:#2d2d2d;}</style></defs><title>portfolio__section-label</title><rect class="a" width="100%" height="80"/><text class="portfolio__section-label_text" transform="translate(15 53.4)">GRAPHIC DESIGN</text> </svg>
+          <svg xmlns="http://www.w3.org/2000/svg"> <defs><style>.a{fill:#2d2d2d}</style></defs> <polygon class="a" points="80 80 0 80 0 0 80 80" /> </svg>
+        </div>
         <div class="portfolio-items">
-          <a class="portfolio__item portfolio__item--4" target="_blank" href="./projects/SAB_brand_identity.pdf"><div></div></a>
-          <a class="portfolio__item portfolio__item--5" target="_blank" href="./projects/EECA_ad_campaign.pdf"><div></div></a>
-          <a class="portfolio__item portfolio__item--6" target="_blank" href="./projects/NZSci_magazine.pdf"><div></div></a>
-          <a class="portfolio__item portfolio__item--7" target="_blank" href="./projects/KITK_brochure.pdf"><div></div></a>
+          <a class="portfolio__item portfolio__item--4" href="#"></a>
+          <a class="portfolio__item portfolio__item--5" target="_blank" href="./projects/EECA_ad_campaign.pdf"></a>
+          <a class="portfolio__item portfolio__item--6" target="_blank" href="./projects/NZSci_magazine.pdf"></a>
+          <a class="portfolio__item portfolio__item--7" target="_blank" href="./projects/KITK_brochure.pdf"></a>
         </div>
       </div>
     </main>
@@ -61,23 +67,14 @@
     </footer>
     <div class="modal-overlay closed">
       <span class="modal-close">X</span>
-      <svg class="modal-label" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 380 80" preserveAspectRatio="xMinYMin meet"><defs><style>.cls-1{fill:#2d2d2d;}</style></defs><title>portfolio__section-label</title><rect class="cls-1" x="-0.3" y="54.8" width="2000" height="25"/><polygon class="cls-1" points="-0.3 79.7 -0.3 -0.3 351 -0.3 431.5 79.7 -0.3 79.7"/><text class="modal-label__text" transform="translate(14.6 52.8)">CarbCounter+ PWA</text></svg>
+      <div class="modal-label">
+          <svg class="modal-label__tab" xmlns="http://www.w3.org/2000/svg" width="355px"><defs><style>.a{fill:#2d2d2d;}</style></defs><rect class="a" width="100%" height="80"/><text class="modal-label__text" transform="translate(15 53.4)">WEB</text></svg>
+          <svg xmlns="http://www.w3.org/2000/svg"> <defs><style>.a{fill:#2d2d2d}</style></defs> <polygon class="a" points="80 80 0 80 0 0 80 80" /> </svg>
+        </div>
       <div class="modal closed">
         <img class="modal__img" src="" alt="" />
         <div class="modal-aside">
           <p class="modal-aside__description">Modal Description</p>
-          <div class="modal-aside__features">
-            <h2>Features</h2>
-            <ul class="modal-aside__feature-list">
-              <li>Carbohydrate calculator</li>
-              <li>Doseage calculator</li>
-              <li>Set carb unit CU, BU, and g</li>
-              <li>Set blood glucose unit mmol/l, and mg/dl</li>
-              <li>Set correction factor</li>
-              <li>Set target BG level</li>
-              <li>Set carb to insulin ratio</li>
-            </ul>
-          </div>
           <a class="modal-aside__link" target="_blank" href="">Link to Work</a>
         </div>
       </div>
