Added more modal images

--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
           <svg xmlns="http://www.w3.org/2000/svg"> <defs><style>.a{fill:#2d2d2d}</style></defs> <polygon class="a" points="80 80 0 80 0 0 80 80" /> </svg>
         </div>
         <div class="portfolio-items">
-          <a class="portfolio__item portfolio__item--4" href="#"></a>
+          <a class="portfolio__item portfolio__item--4" target="_blank" href="./projects/SAB_brand_identity.pdf"></a>
           <a class="portfolio__item portfolio__item--5" target="_blank" href="./projects/EECA_ad_campaign.pdf"></a>
           <a class="portfolio__item portfolio__item--6" target="_blank" href="./projects/NZSci_magazine.pdf"></a>
           <a class="portfolio__item portfolio__item--7" target="_blank" href="./projects/KITK_brochure.pdf"></a>
