update custom value placeholder

--- a/projects/CarbCounterPlusAngular/app/carbcalc/carbcalc.html
+++ b/projects/CarbCounterPlusAngular/app/carbcalc/carbcalc.html
@@ -34,7 +34,7 @@
         <option value="">Select an Amount</option>
       </select>
       <input class="carb-select__customname" type="text" placeholder="Enter custom name (optional)" ng-show="customcarb" ng-model="customcarbname">
-      <input class="carb-select__customamount" type="number" placeholder="Enter custom value" ng-hide="categoryselect" ng-model="customcarb">
+      <input class="carb-select__customamount" type="number" placeholder="Or enter custom value" ng-hide="categoryselect" ng-model="customcarb">
     </div>
 
     <button class="add-carb background--blue" ng-click="addToList()">Add to list</button>
